--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ data/news.2012.en.shuffled-norm0-phrase0
 data/news.2012.en.shuffled-norm0-phrase1
 data/news.2012.en.shuffled-norm1-phrase1
 data/vectors-phrase.bin
+.idea/
+cmake-build-debug/
