--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ bin/distance
 bin/word-analogy
 bin/word2phrase
 bin/word2vec
+bin/Makefile
+bin/cmake_install.cmake
 data/text8.gz
 data/vectors-phrase
 data/news.2012.en.shuffled
@@ -15,3 +17,4 @@ data/news.2012.en.shuffled-norm1-phrase1
 data/vectors-phrase.bin
 .idea/
 cmake-build-debug/
+CMakeFiles/
